--- a/app/index.html
+++ b/app/index.html
@@ -1,40 +1,34 @@
-<!DOCTYPE html>
+<!doctype>
 <html>
+
 <head>
- <title>Hello World DApp</title>
- <link href='https://fonts.googleapis.com/css?family=Open Sans:400,700' rel='stylesheet' type='text/css'>
- <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="../node_modules/bignumber.js/bignumber.min.js"></script>
+<script type="text/javascript" src="../dist/web3-light.js"></script>
+<script type="text/javascript">
+   
+    var Web3 = require('web3');
+    var web3 = new Web3();
+    web3.setProvider(new web3.providers.HttpProvider());
+    function watchBalance() {
+        var conduitAccount = web3.eth.accounts[0];
+        var originalBalance = web3.eth.getBalance(conduitAccount).toNumber();
+        document.getElementById('conduitAccount').innerText = 'conduitToken: ' + conduitAccount;
+        document.getElementById('original').innerText = ' original balance: ' + originalBalance + '    watching...';
+        web3.eth.filter('latest').watch(function() {
+            var currentBalance = web3.eth.getBalance(coinbase).toNumber();
+            document.getElementById("current").innerText = 'current: ' + currentBalance;
+            document.getElementById("diff").innerText = 'diff:    ' + (currentBalance - originalBalance);
+        });
+    }
+</script>
 </head>
-<body class="container">
- <h1>A Simple Hello World Voting Application</h1>
- <div class="table-responsive">
-  <table class="table table-bordered">
-   <thead>
-    <tr>
-     <th>Candidate</th>
-     <th>Votes</th>
-    </tr>
-   </thead>
-   <tbody>
-    <tr>
-     <td>Rama</td>
-     <td id="candidate-1"></td>
-    </tr>
-    <tr>
-     <td>Nick</td>
-     <td id="candidate-2"></td>
-    </tr>
-    <tr>
-     <td>Jose</td>
-     <td id="candidate-3"></td>
-    </tr>
-   </tbody>
-  </table>
- </div>
- <input type="text" id="candidate" />
- <a href="#" onclick="voteForCandidate()" class="btn btn-primary">Vote</a>
+<body>
+    <h1>coinbase balance</h1>
+    <button type="button" onClick="watchBalance();">watch balance</button>
+    <div></div>
+    <div id="conduitAccount"></div>
+    <div id="original"></div>
+    <div id="current"></div>
+    <div id="diff"></div>
 </body>
-<script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-<script src="./index.js"></script>
 </html>
